--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Josefin+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
 </head>
@@ -15,12 +16,15 @@
         <img src="assets/Freddie.png" alt="Freddie champion">
         <h1>We are the Champions</h1>
         <textarea id="endorseInputField" placeholder="Write your endorsement here"></textarea>
+        <div>
+            <input  id="inputFrom" type="text" placeholder="From">
+            <input id="inputTo" placeholder="To">
+        </div>
         <button id="publishBtn">Publish</button>
         <h2>- Endorsements - </h2>
         <ul id="endorseList"></ul>
     </div>
 
-    
     <script src='index.js' type="module"></script>
 </body>
 </html>
